--- a/src/components/Watch/Watch.css
+++ b/src/components/Watch/Watch.css
@@ -29,6 +29,10 @@
     justify-content: center;
 }
 
+.btn-cart p {
+    margin-right: 5px;
+}
+
 .btn-cart:hover {
     background-color: goldenrod;
 }
