--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,3 +1,8 @@
+.cart-section {
+    position: sticky;
+    top: 40px;
+}
+
 .buttons {
     display: flex;
     flex-direction: column;
@@ -22,4 +27,11 @@
     border: 1px solid;
     padding: 5px 10px;
     border-radius: 3px;
+}
+
+@media only screen and (max-width: 768px) {
+    .buttons {
+        width: 50%;
+        margin: 0 30px;
+    }
 }
