--- a/src/components/Item/Items.css
+++ b/src/components/Item/Items.css
@@ -26,3 +26,13 @@
 .remove-item:hover {
     color: darkgrey;
 }
+
+@media only screen and (max-width: 768px) {
+    .selected-item {
+        margin: 0 30px;
+        display: flex;
+        /* justify-content: center; */
+        align-items: center;
+        font-size: 16px;
+    }
+}
