--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -41,6 +41,6 @@
     .watch-part {
         display: grid;
         grid-template-columns: 1fr;
-        margin: 0;
+        margin: 0 10px;
     }
 }
