--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,19 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+header h1 {
+  color: cadetblue;
+  margin-bottom: 0;
+  font-weight: 600;
+}
+
+header h3 {
+  margin: 0;
+  font-weight: 400;
 }
