--- a/src/components/Item/Items.css
+++ b/src/components/Item/Items.css
@@ -1,4 +1,4 @@
-.selected-item {
+.selected-items {
     margin-left: 80px;
     display: flex;
     /* justify-content: center; */
@@ -6,12 +6,12 @@
     font-size: 16px;
 }
 
-.selected-item img {
+.selected-items img {
     width: 35px;
     border-radius: 15px;
 }
 
-.selected-item p {
+.selected-items p {
     margin: 12px 5px;
 }
 
@@ -27,12 +27,17 @@
     color: darkgrey;
 }
 
-@media only screen and (max-width: 768px) {
-    .selected-item {
+@media only screen and(max-width: 600px) {
+    .selected-items {
         margin: 0 30px;
-        display: flex;
-        /* justify-content: center; */
-        align-items: center;
         font-size: 16px;
     }
 }
+
+/* 
+@media only screen and(min-width:600px) and (max-width: 768px) {
+    .selected-items {
+        margin-right: 50px;
+        font-size: 50px;
+    }
+} */
