--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -11,6 +11,7 @@
     margin-left: 30px;
 }
 
+
 .hidden-item {
     display: none;
 }
@@ -23,6 +24,7 @@
 
     .hidden-item {
         display: block;
+        font-weight: 400;
     }
 
     .watch-part {
